# langfuse-synth-core

./: .gitignore  CONTRACT.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INSTALL.md  SEAM.md
examples/: kit.Dockerfile
src/langfuse_synth_core/: __init__.py  companion.py  config.py  derivation.py  timegen.py
src/langfuse_synth_core/authoring/: __init__.py  _seed_runner.py  cli.py  egress.py  golden.py  knob.py  usecase.schema.json  validate.py
src/langfuse_synth_core/live/: __init__.py
src/langfuse_synth_core/seed/: __init__.py
tests/: test_authoring_boundary.py  test_authoring_cli_name.py  test_cli_freeze.py  test_core_runtime.py  test_derivation.py  test_egress_block.py  test_golden_gate.py  test_golden_hashseed_pin.py  test_runtime_import.py  test_target_traces_knob.py  test_validate_authoring_checks.py  test_validate_cli.py  test_validate_gold_drift.py  test_validate_portal_parity.py
tests/fixtures/: hashy_kit.py  tiny_kit.py  tiny_kit_llm.py
tests/fixtures/manifests/: ev-subsidy-regression.usecase.yaml
