[project]
name = "langfuse-synth-core"
version = "0.0.0"
description = "Shared synthesis library + Authoring SDK for Demo Depot kits (Spec A, #19)."
requires-python = ">=3.11"
# Runtime dependencies are intentionally empty at the scaffold stage. The library's
# real runtime deps (the Langfuse client, ingestion, pricing, RNG) arrive with the
# Ring 1 extraction (#31/#32). Keeping this empty now makes the [authoring] boundary
# provable: a bare runtime install must carry NONE of the authoring toolchain's deps.
dependencies = []

[project.optional-dependencies]
# The authoring toolchain (synth-authoring new/validate/freeze + kit-dev skills, #27/#28/#11).
# The runtime (deployed-kit / portal) install must NEVER pull these — the boundary
# test asserts `import langfuse_synth_core.authoring` fails without this extra.
authoring = [
    "jsonschema>=4.18,<5",
    "PyYAML>=6,<7",
]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
# The authoring CLI (#27 ships `synth-authoring validate`; #28/#11 add `freeze`/`new`).
# It is namespaced `synth-authoring`, NOT `synth`, on purpose: the bare `synth` name is
# the KIT runtime console script (synth probe|plan|seed|verify|...), the portal
# integration surface (CONTRACT.md reserved-verb table; every manifest pipeline runs
# `synth <verb> --config {config}`). A console script installs regardless of extras, so
# registering `synth` here would put a competing entry point on PATH the moment a kit
# installs the lib (Ring 1, #31) and shadow the kit's pipeline. Namespacing sidesteps the
# collision entirely and keeps a clean split: `synth` runs a kit, `synth-authoring`
# authors one. (Running `synth-authoring` on a runtime-only install still raises the
# boundary ModuleNotFoundError from authoring/__init__ — but it no longer shadows `synth`.)
synth-authoring = "langfuse_synth_core.authoring.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["langfuse_synth_core*"]

[tool.setuptools.package-data]
# Ship the one versioned copy of the Contract schema as package data so `load_schema()`
# resolves it via importlib.resources on any install (source, wheel, or editable).
"langfuse_synth_core.authoring" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
