[project]
name = "langfuse-synth-core"
version = "0.1.0"
description = "Shared synthesis library + Authoring SDK for Demo Depot kits (Spec A, #19)."
requires-python = ">=3.11"
# Runtime deps arrive with the Ring 1 extraction (#31). The byte-identical core is
# pure stdlib except the Langfuse client (`lfclient`), which constructs the v4 SDK —
# so `langfuse` is the one runtime dependency. It is imported lazily inside
# `get_langfuse`, but declaring it here keeps a bare runtime install self-sufficient.
# This must stay a strict subset of the [authoring] toolchain's deps so the boundary
# test still proves a runtime install carries NONE of the authoring-only packages.
dependencies = [
    "langfuse>=4.0,<5",
]

[project.optional-dependencies]
# The authoring toolchain (synth-authoring new/validate/freeze + kit-dev skills, #27/#28/#11).
# The runtime (deployed-kit / portal) install must NEVER pull these — the boundary
# test asserts `import langfuse_synth_core.authoring` fails without this extra.
authoring = [
    "jsonschema>=4.18,<5",
    "PyYAML>=6,<7",
]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
# The authoring CLI (#27 ships `synth-authoring validate`; #28/#11 add `freeze`/`new`).
# It is namespaced `synth-authoring`, NOT `synth`, on purpose: the bare `synth` name is
# the KIT runtime console script (synth probe|plan|seed|verify|...), the portal
# integration surface (CONTRACT.md reserved-verb table; every manifest pipeline runs
# `synth <verb> --config {config}`). A console script installs regardless of extras, so
# registering `synth` here would put a competing entry point on PATH the moment a kit
# installs the lib (Ring 1, #31) and shadow the kit's pipeline. Namespacing sidesteps the
# collision entirely and keeps a clean split: `synth` runs a kit, `synth-authoring`
# authors one. (Running `synth-authoring` on a runtime-only install still raises the
# boundary ModuleNotFoundError from authoring/__init__ — but it no longer shadows `synth`.)
synth-authoring = "langfuse_synth_core.authoring.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["langfuse_synth_core*"]

[tool.setuptools.package-data]
# Ship the one versioned copy of the Contract schema as package data so `load_schema()`
# resolves it via importlib.resources on any install (source, wheel, or editable).
"langfuse_synth_core.authoring" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Pin the rule set explicitly to pyflakes + pycodestyle (E/F) — the rules this code was
# written and reviewed against. Ruff's *default* select shifts as new rule families are
# stabilized, so relying on it (with a floating `ruff>=0.5,<1` pin) silently reddens CI
# on any ruff bump. Enumerating the rules decouples the lint contract from the ruff
# version; widen this set deliberately, not by an upgrade.
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Ring 1a (#31) extracted these modules from the gold-standard kits BYTE-FOR-BYTE — the
# whole point of the ring is that a diff proves zero behaviour change, so they must NOT
# be reformatted to the lib's 100-col rule. Waive only E501 (line length: the ROLE_PROFILES
# pricing table and the theme CSS/font blocks are intentionally wide) on the verbatim
# files. Every pyflakes rule (F: unused/undefined names, bad imports) still applies, so a
# real extraction defect — e.g. an import that doesn't resolve in the lib — still fails CI.
# Listed = the seven verbatim core files + `timegen.py` (which carries the verbatim `iso`
# primitive). Only some exceed 100 cols today; listing all of them makes the policy —
# "verbatim-extracted code is not reformatted" — explicit and re-bless-proof.
"src/langfuse_synth_core/rng.py" = ["E501"]
"src/langfuse_synth_core/pricing.py" = ["E501"]
"src/langfuse_synth_core/distributions.py" = ["E501"]
"src/langfuse_synth_core/lfclient.py" = ["E501"]
"src/langfuse_synth_core/timegen.py" = ["E501"]
"src/langfuse_synth_core/seed/events.py" = ["E501"]
"src/langfuse_synth_core/live/theme.py" = ["E501"]
"src/langfuse_synth_core/live/paths.py" = ["E501"]
